erDiagram

    %% ═══════════════════════════════════════════════════
    %% ERD 1 of 6: GEOGRAPHY & ORGANISATION
    %% DWA V&V System — Presentation View
    %% ═══════════════════════════════════════════════════

    Province {
        Guid ProvinceId PK
        string ProvinceName
        string ProvinceCode
    }

    WaterManagementArea {
        Guid WmaId PK
        string WmaName
        string WmaCode
        Guid ProvinceId FK
    }

    CatchmentArea {
        Guid CatchmentAreaId PK
        string CatchmentCode
        string CatchmentName
        Guid WmaId FK
    }

    OrganisationalUnit {
        Guid OrgUnitId PK
        string Name
        string Type "National|Provincial|Regional|CMA"
        Guid ProvinceId FK
        Guid WmaId FK
        Guid CatchmentAreaId FK "[AMENDED 2026-04-01]"
    }

    Address {
        Guid AddressId PK
        string StreetAddress
        string SuburbName
        string CityName
        string Province
        decimal Longitude "decimal(9,6)"
        decimal Latitude "decimal(9,6)"
    }

    ApplicationUser {
        Guid ApplicationUserId PK
        string EmailAddress
        string FirstName
        string LastName
        string EmployeeNumber
        DateOnly DateOfBirth
        Guid OrgUnitId FK
    }

    %% ── Relationships ──

    Province ||--o{ WaterManagementArea : "contains 19 WMAs"
    Province ||--o{ OrganisationalUnit : "has offices in"
    WaterManagementArea ||--o{ CatchmentArea : "contains [AMENDED 2026-04-01]"
    WaterManagementArea ||--o{ OrganisationalUnit : "covered by"
    CatchmentArea ||--o{ OrganisationalUnit : "scopes [AMENDED 2026-04-01]"
    OrganisationalUnit ||--o{ ApplicationUser : "employs"
